--- a/DCF.DataLayer/DCF.DataLayer.csproj
+++ b/DCF.DataLayer/DCF.DataLayer.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MySqlOdbcUtils.cs" />
     <Compile Include="MySqlUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DCF.Common\DCF.Common.csproj">
@@ -59,6 +60,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="DB Scripts\CreateCorrectFactsTable.mysql" />
     <None Include="DB Scripts\CreateItemsMentionsTable.mysql" />
     <None Include="DB Scripts\CreateItemsTable.mysql" />
     <None Include="DB Scripts\CreateQueryFormsTable.mysql" />
