--- a/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
+++ b/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
@@ -32,7 +32,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.2.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="PowerCollections, Version=1.0.2141.24679, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Bin\Lib\PowerCollections.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -46,17 +51,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InitSection.cs" />
     <Compile Include="ItemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDataGenerationManager.cs" />
     <Compile Include="TestDataGenerator.cs" />
     <Compile Include="TopicTemplate.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DCF.Common\DCF.Common.csproj">
+      <Project>{8A782AC0-E6C7-40DF-879B-71C2024DFCC1}</Project>
+      <Name>DCF.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DCF.DataLayer\DCF.DataLayer.csproj">
       <Project>{6F03B9FC-870E-4A30-9AC7-5D4CC5997860}</Project>
       <Name>DCF.DataLayer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="ExternalData\DCF.DemoRules.Test.Schema.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ExternalData\Items.xml" />
+    <Content Include="ExternalData\Topics.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
