--- a/DCF.QuestionAnswering/App.config
+++ b/DCF.QuestionAnswering/App.config
@@ -20,6 +20,8 @@
     <add key="DBUserName" value="boris"/>
     <add key="DBPassword" value="boris"/>
     <add key="DBName" value="triviamasster"/>
+    <add key="HostName" value="localhost"/>
+    <!--add key="HostName" value="boris-notebook"/-->
     <!--<add key="DBName" value="example1"/>-->
   </appSettings>
 
