--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -8,18 +8,19 @@
     <!-- these two keys automatically read from Logger-->
     <add key="ShowSQL" value="false"/>
     <add key="ShowTableContents" value="false"/>
-    <!--<add key="DbInitOnly" value="true"/>
-    <add key="DbInitOnly" value="false"/>
-    <add key="NoDbInit" value="true"/>
+    
     <add key="MaxSampleIterations" value="100"/>
+    <add key="MaxCleaningIterationsPerSample" value="1"/>
     <add key="ConversionDelta" value="0.1"/>
     <add key="ConversionSamplesCount" value="7"/>
     <add key="ConversionAlfa" value="0.93"/>
     <add key="ConversionTolerance" value="0.1"/>
-    <add key="Experiment" value="9"/>-->
-    <add key="DBUserName" value="boris"/>
-    <add key="DBPassword" value="boris"/>
+    <add key="Experiment" value="9"/>
+    
+    <add key="DBUserName" value="ult"/>
+    <add key="DBPassword" value="abcde"/>
     <add key="DBName" value="triviamasster"/>
+    <add key="HostName" value="boris-notebook"/>
   </appSettings>
 
   <InitSection
