--- a/DCF.DataLayer/DCF.DataLayer.csproj
+++ b/DCF.DataLayer/DCF.DataLayer.csproj
@@ -64,6 +64,7 @@
     <None Include="DB Scripts\CreateItemsMentionsTable.mysql" />
     <None Include="DB Scripts\CreateItemsTable.mysql" />
     <None Include="DB Scripts\CreateQueryFormsTable.mysql" />
+    <None Include="DB Scripts\CreateViews.mysql" />
     <None Include="DB Scripts\PopulateUsersFromGuess.mysql" />
     <None Include="DB Scripts\zCreateScoredFactsTable.mysql" />
     <None Include="DB Scripts\CreateTopicsTable.mysql" />
