Added topic wrong answers variability (not checked)

--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -25,8 +25,7 @@
 
   <InitSection
     NumberOfFacts="5000"
-    NumberOfCountriesWithRestrictedIncorrectFactsCount="3"
-    NumberOfIncorrectFactsInUse="2"
+    TopicsRestrictionProfile="(3,2)"
     GenerateBasisTables="true"
     UserProfiles="(0.1,1.0)(0.2,0.6)(0.5,0.15)(0.2,0.0)"
     ItemsDefinitionFile="C:\Users\Public\Documents\Sudies\Graduate Studies\Thesis\code\DCF\DCF.DemoRules.Test\ExternalData\Items.xml"
