First Run with all paper rules

--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -15,21 +15,30 @@
     <add key="ConversionSamplesCount" value="7"/>
     <add key="ConversionAlfa" value="0.93"/>
     <add key="ConversionTolerance" value="0.1"/>
-    <add key="Experiment" value="9"/>
+    <add key="ExperimentType" value="9"/>
     
-    <add key="DBUserName" value="ult"/>
-    <add key="DBPassword" value="abcde"/>
+    <add key="DBUserName" value="boris"/>
+    <add key="DBPassword" value="boris"/>
     <add key="DBName" value="triviamasster"/>
-    <add key="HostName" value="boris-notebook"/>
+    <add key="HostName" value="localhost"/>
+
+    <!--<add key="DBUserName" value="guess1"/>
+    <add key="DBPassword" value="guess1"/>
+    <add key="DBName" value="triviamasster"/>
+    <add key="HostName" value="192.168.1.12"/>-->
+
   </appSettings>
 
+  <!--  The init section description
+  TopicsRestrictionProfile="(number of topics with restrictions, number of possible incorrect fact on restricted topic)"
+  -->
   <InitSection
-    NumberOfFacts="5000"
-    TopicsRestrictionProfile="(3,2)"
-    GenerateBasisTables="true"
+    NumberOfFacts="10000"
+    TopicsVariabilityProfile="(3,2)"
+    GenerateBasisTables="true" 
     UserProfiles="(0.1,1.0)(0.2,0.6)(0.5,0.15)(0.2,0.0)"
-    ItemsDefinitionFile="C:\Users\Public\Documents\Sudies\Graduate Studies\Thesis\code\DCF\DCF.DemoRules.Test\ExternalData\Items.xml"
-    TopicsDefinitionFile="C:\Users\Public\Documents\Sudies\Graduate Studies\Thesis\code\DCF\DCF.DemoRules.Test\ExternalData\Topics.xml"
+    ItemsDefinitionFile="ExternalData\ItemsPaper.xml"
+    TopicsDefinitionFile="ExternalData\TopicsPaper.xml"
     />
   <!--UserProfiles="(0.1,1.0)(0.2,0.6)(0.5,0.15)(0.2,0.0)"-->
 </configuration> 
