--- a/DCF.DataLayerAwareLib/DCF.DataLayerAwareLib.csproj
+++ b/DCF.DataLayerAwareLib/DCF.DataLayerAwareLib.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DcfRule.cs" />
     <Compile Include="MySqlRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
