--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -11,12 +11,15 @@
     
     <add key="MaxSampleIterations" value="100"/>
     <add key="MaxCleaningIterationsPerSample" value="1"/>
-    <add key="ConversionDelta" value="0.1"/>
+    <add key="ConversionDelta" value="0.05"/>
     <add key="ConversionSamplesCount" value="7"/>
     <add key="ConversionAlfa" value="0.93"/>
     <add key="ConversionTolerance" value="0.1"/>
-    <add key="ExperimentType" value="9"/>
-    
+    <add key="ExperimentType" value="3"/>
+    <!--    RepeirPrimaryKey = 0,
+            TwoEstimates = 1,
+            Cosine = 2,
+            Majority = 3-->
     <add key="DBUserName" value="boris"/>
     <add key="DBPassword" value="boris"/>
     <add key="DBName" value="triviamasster"/>
@@ -36,7 +39,7 @@
     NumberOfFacts="10000"
     TopicsVariabilityProfile="(3,2)"
     GenerateBasisTables="true" 
-    UserProfiles="(0.1,1.0)(0.2,0.6)(0.5,0.15)(0.2,0.0)"
+    UserProfiles="(0.8,0.1)(0.2,1.0)"
     ItemsDefinitionFile="ExternalData\ItemsPaper.xml"
     TopicsDefinitionFile="ExternalData\TopicsPaper.xml"
     />
