--- a/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
+++ b/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
@@ -88,6 +88,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ExternalData\CheckSupport.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="ExternalData\create_run_bat.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
