--- a/DCF.DataLayer/DCF.DataLayer.csproj
+++ b/DCF.DataLayer/DCF.DataLayer.csproj
@@ -60,6 +60,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="DB Scripts\CreateAllTables.mysql" />
     <None Include="DB Scripts\CreateCorrectFactsTable.mysql" />
     <None Include="DB Scripts\CreateItemsMentionsTable.mysql" />
     <None Include="DB Scripts\CreateItemsTable.mysql" />
