--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -22,7 +22,7 @@
             Majority = 3-->
     <add key="DBUserName" value="boris"/>
     <add key="DBPassword" value="boris"/>
-    <add key="DBName" value="triviamasster"/>
+    <add key="DBName" value="astellas"/>
     <add key="HostName" value="localhost"/>
 
     <!--<add key="DBUserName" value="guess1"/>
