--- a/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
+++ b/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
@@ -51,11 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CountinousThreadState.cs" />
     <Compile Include="DatabaseCleaningManager.cs" />
     <Compile Include="InitSection.cs" />
     <Compile Include="ItemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDataAdvancedGenerator.cs" />
     <Compile Include="TestDataGenerationManager.cs" />
     <Compile Include="TestDataGenerator.cs" />
     <Compile Include="TopicTemplate.cs" />
