--- a/DCF.DemoRules/DCF.DemoRules.csproj
+++ b/DCF.DemoRules/DCF.DemoRules.csproj
@@ -46,10 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OfflineCleaningRuleProvider.cs" />
+    <Compile Include="OnlineCleaningRuleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rule.MultipleAnswersSample.cs" />
     <Compile Include="Rule.RepairKeySample.cs" />
     <Compile Include="Rule.DanielConvergence.cs" />
+    <Compile Include="SingleIterationMultiAnswersRule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DCF.DataLayerAwareLib\DCF.DataLayerAwareLib.csproj">
