--- a/DCF.QuestionAnswering/App.config
+++ b/DCF.QuestionAnswering/App.config
@@ -19,7 +19,7 @@
     <add key="Experiment" value="9"/>
     <add key="DBUserName" value="boris"/>
     <add key="DBPassword" value="boris"/>
-    <add key="DBName" value="astellas"/>
+    <add key="DBName" value="demo"/>
     <add key="HostName" value="localhost"/>
     <!--add key="HostName" value="boris-notebook"/-->
     <!--<add key="DBName" value="example1"/>-->
