two weeks before code freeze

--- a/DCF.DemoRules/DCF.DemoRules.csproj
+++ b/DCF.DemoRules/DCF.DemoRules.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Rule.RepairKeySample.cs" />
     <Compile Include="Rule.DanielConvergence.cs" />
     <Compile Include="SingleIterationMultiAnswersRule.cs" />
+    <Compile Include="SingleIterationSingleAnswersRule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DCF.DataLayerAwareLib\DCF.DataLayerAwareLib.csproj">
