--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -16,6 +16,7 @@
     <add key="ConversionAlfa" value="0.93"/>
     <add key="ConversionTolerance" value="0.1"/>
     <add key="ExperimentType" value="3"/>
+    <add key="TopicCategory" value="Demo"/>
     <!--    RepeirPrimaryKey = 0,
             TwoEstimates = 1,
             Cosine = 2,
