Generation of user graph

--- a/DCF.DemoRules.Test/App.config
+++ b/DCF.DemoRules.Test/App.config
@@ -23,8 +23,10 @@
             Majority = 3-->
     <add key="DBUserName" value="boris"/>
     <add key="DBPassword" value="boris"/>
-    <add key="DBName" value="demo"/>
+    <add key="DBName" value="test"/>
     <add key="HostName" value="localhost"/>
+    <add key="DBConnectionString" 
+         value="Data Source=localhost;Initial Catalog=test;User Id=boris;Password=boris;default command timeout=6000;Allow User Variables=true"/>
 
     <!--<add key="DBUserName" value="guess1"/>
     <add key="DBPassword" value="guess1"/>
@@ -37,12 +39,14 @@
   TopicsRestrictionProfile="(number of topics with restrictions, number of possible incorrect fact on restricted topic)"
   -->
   <InitSection
-    NumberOfFacts="10000"
-    TopicsVariabilityProfile="(3,2)"
+    NumberOfFacts="1000"
+    TopicsVariabilityProfile="(100,10-10)"
     GenerateBasisTables="true" 
-    UserProfiles="(0.8,0.1)(0.2,1.0)"
+    UserProfiles="(1.0,0.1)"
     ItemsDefinitionFile="ExternalData\ItemsPaper.xml"
     TopicsDefinitionFile="ExternalData\TopicsPaper.xml"
+    UsersCount="5000"
+    NumOfTopicsToAnswer="60"
     />
   <!--UserProfiles="(0.1,1.0)(0.2,0.6)(0.5,0.15)(0.2,0.0)"-->
 </configuration> 
