--- a/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
+++ b/DCF.DemoRules.Test/DCF.DemoRules.Test.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data, Version=6.2.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="PowerCollections, Version=1.0.2141.24679, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Bin\Lib\PowerCollections.dll</HintPath>
@@ -55,11 +55,14 @@
     <Compile Include="DatabaseCleaningManager.cs" />
     <Compile Include="InitSection.cs" />
     <Compile Include="ItemTemplate.cs" />
+    <Compile Include="MySpecialBitArray.cs" />
+    <Compile Include="ProducerConsumerQ.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDataAdvancedGenerator.cs" />
     <Compile Include="TestDataGenerationManager.cs" />
     <Compile Include="TestDataGenerator.cs" />
+    <Compile Include="TestTextFilesGenerator.cs" />
     <Compile Include="TestXmlReading.cs" />
     <Compile Include="TopicTemplate.cs" />
   </ItemGroup>
